--- a/articles/albumstyle.css
+++ b/articles/albumstyle.css
@@ -1,3 +1,21 @@
+/*====================
+Contents
+
+1) General
+
+2) show more/less toggle
+
+3) Blog body
+
+4) Media Queries
+====================*/
+
+
+
+/*====================
+   1) General css
+====================*/
+
 html {
     text-align: center;
     font-family: "roboto", arial;
@@ -5,17 +23,15 @@ html {
     scroll-behavior: smooth;
 }
 
-
-
-/*General css*/
-
 .center {
     display: block;
     margin: 0 auto;
 }
 
 
-/*Show more show less toggle*/
+/*========================================
+     2) Show more show less toggle
+========================================*/
 
 .more-content {
     display: none;
@@ -40,7 +56,9 @@ html {
     color: #444;
 }
 
-/*Blog entry body*/
+/*====================
+ 3) Blog entry body
+====================*/
 
 .body {
     max-width: 675px;
@@ -127,7 +145,9 @@ html {
 
 
 
-/* Media Queries */
+/*====================
+   4) Media Queries 
+====================*/
 
 @media only screen and (max-width: 800px) {
 
