--- a/resources/css/header-footer.css
+++ b/resources/css/header-footer.css
@@ -1,4 +1,27 @@
-/*General css*/
+/*==================
+
+CONTENTS
+
+1) General
+
+2) Banner
+
+3.1) Header
+3.2) Header Home Page
+3.3) Header Portfolio Page
+3.4) Header Nav Links
+3.5) Dropdown Menu
+
+4) Footer
+
+5) Media Queries
+
+==================*/
+
+
+/*=====================
+   1)  General css
+=====================*/
 
 .title-font {
     font-family: "nunito sans", sans-serif;
@@ -13,12 +36,14 @@ a {
 
 
 
-/*Banner*/
+/*====================
+    2)  Banner
+====================*/
 
 .banner {
     display: none;
-    height: 4.5vh;
-    min-height: 30px;
+    height: 5vh;
+    min-height: 40px;
 }
 
 .banner-left {
@@ -61,7 +86,9 @@ a {
 
 
 
-/*Header*/
+/*====================
+    3)  Header
+====================*/
 
 
 
@@ -95,7 +122,9 @@ a {
 }
 
 
-/* Header Home Page*/
+/*====================
+3.1)  Header Home Page
+====================*/
 
 
 .header-home {
@@ -191,9 +220,77 @@ a {
 }
 
 
+/*========================
+3.2) Header Portfolio Page
+========================*/
 
 
-/*header navigation links*/
+.header-background-portfolio {
+    
+    background-image: url("../images/mountain1.jpg");
+    background-image: url("../../articles/3-austria-dec2017-apr2018/images/moon.jpg");
+    background-image: url("../images/moon.jpg");
+    /*background-image: url("../article-images/1-riverhome.jpg");*/
+    /*background-position: left;*/
+}
+
+.portfolio-block-container {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 100vw;
+    height: 100%;
+}
+
+.skill-container {
+    padding: 2.5%;
+    border: 3px solid white;
+    border-radius: 15px;
+    text-align: left;
+    width: 38%;
+    max-width: 500px;
+    min-width: 250px;
+    height: 325px;
+    display: flex;
+    flex-direction: column;
+    margin: 3%;
+}
+
+.skill-title {
+    font-size: clamp(1.5rem, 4vw, 2.95rem);
+    font-family: "nunito sans", sans-serif;
+    margin: 1% 1% 6% 0;
+}
+
+.skill-text {
+    font-size: clamp(0.85rem, 2.5vw, 1.28rem);
+    line-height: 1.3;
+    font-weight: 300;
+}
+
+.header-quote-container-portfolio {
+    margin-bottom: 3%;
+    height: 100%;
+}
+
+.grey {
+    color: #dedede;
+}
+
+.dropdown span.grey-background {
+    background-color: #dedede;
+    border: 1px solid #dedede;
+}
+
+.nav-link.current-page-port {
+    color: #dedede;
+    font-weight: 600;
+}
+
+
+/*===========================
+3.3)  header navigation links
+===========================*/
 
 
 
@@ -231,7 +328,11 @@ a {
     font-weight: 600;
 }
 
-/* Dropdown Menu */
+
+/*====================
+3.4)  Dropdown Menu 
+====================*/
+
 
 .dropdown {
     position: relative;
@@ -307,7 +408,10 @@ a {
 }
 
 
-/*Footer*/
+/*=====================
+    4)  Footer
+=====================*/
+
 
 .footer {
     margin-top: 100px;
@@ -340,7 +444,9 @@ a {
 
 
 
-/* Media Queries */
+/*====================
+ 5)  Media Queries 
+====================*/
 
 
 @media only screen and (max-width: 1024px) {
@@ -358,7 +464,7 @@ a {
     }
 
     .header-background {
-        height: 95.5vh;
+        height: 95vh;
     }
 
     .header-links {
@@ -374,6 +480,13 @@ a {
     }
 }
 
+@media only screen and (max-width: 940px) {
+    .header-background-portfolio {
+        background-image: url("../images/moon-small.jpg");
+        background-position: left;
+    }
+}
+
 @media only screen and (max-width: 700px) {
 
     .footer {
@@ -382,6 +495,18 @@ a {
 
     .footerlinks .insta {
         display: none;
+    }
+}
+
+@media only screen and (max-width: 650px) {
+    .portfolio-block-container {
+        flex-direction: column;
+    }
+
+    .skill-container {
+        height: auto;
+        padding-bottom: 15%;
+        width: 80%;
     }
 }
 
@@ -421,6 +546,11 @@ a {
     .header-background {
         background-image: url("../images/landing-photo-mobile.jpg");
     }
+
+    .header-background-portfolio {
+        background-image: url("../images/moon-small.jpg");
+        background-position: left;
+    }
 }
 
 /* Height Media Queries */
@@ -436,6 +566,11 @@ a {
 @media only screen and (max-height: 750px) {
     .header-quote-container {
         margin-bottom: 4%;
+    }
+
+    .skill-container {
+        height: 150px;
+        padding-bottom: 1.5vh;
     }
 }
 
