--- a/portfolio/portfolio-resources/portfolio-css/portfolio.css
+++ b/portfolio/portfolio-resources/portfolio-css/portfolio.css
@@ -65,13 +65,30 @@ html {
     text-align: center;
     border-left: 3px solid var(--main-blue);
     cursor: pointer;
-    transition: background-color 250ms;
     white-space: nowrap; 
     transition: background-color 200ms, color 200ms;
 }
 
-.portfolio-headings .page-title:hover {
+.cv-button {
+    color: black;
+    font-weight: 600;
+    padding: max(5px, 0.3%);
+    font-size: clamp(1rem, 4.5vw, 2.3rem);
+    background-color: transparent;
+    border: 3px solid var(--main-blue);
+    border-radius: 4px;
+    width: min(300px, 80%);
+    cursor: pointer;
+    margin-bottom: max(30px, 4%);
+    transition: background-color 300ms, color 300ms;
+    display: block;
+    box-shadow: 2px 2px 5px rgba(35,35,35, 0.3);
+}
+
+.portfolio-headings .page-title:hover,
+.cv-button:hover {
     background-color: rgba(24, 149, 220, 0.3);
+    color: black;
 }
 
 .portfolio-headings .page-title:focus {
@@ -85,6 +102,7 @@ html {
 
 .page-title.current:hover {
     background-color: var(--main-blue);
+    color: white;
 }
 
 .page-title {
@@ -145,13 +163,13 @@ html {
 }
 
 .portfolio-web-body {
-    display: none;
+    display: block;
 }
 
 .portfolio-photo-body {
     display: -webkit-box;
     display: -ms-flexbox;
-    display: flex;
+    display: none;
     -ms-flex-flow: row wrap;
         flex-flow: row wrap;
     -webkit-box-pack: justify;
@@ -168,14 +186,35 @@ html {
     line-height: 1.4;
 }
 
-.web-text a {
+.web-text a,
+.web-text-link {
     text-decoration: underline;
     color: var(--main-blue);
     transition: color 250ms;
+    cursor: pointer;
 }
 
-.web-text a:hover {
+.web-text a:hover,
+.web-text-link:hover {
     color: #0F63F2;
+}
+.dropdown-arrow {
+    width: max(15px, 1.1vw);
+    margin-left: max(3px, 1%);
+    transition: transform 300ms;
+    cursor: pointer;
+}
+
+.feature-list {
+    text-align: left;
+    list-style: disc;
+    line-height: 1.3;
+    display: none;
+    padding: max(3px, 1%) 0 max(3px, 1%) max(8px, 4%);
+}
+
+.rotate-arrow {
+    transform: rotate(180deg);
 }
 
 .logo-container {
