--- a/portfolio/portfolio-resources/portfolio-css/portfolio.css
+++ b/portfolio/portfolio-resources/portfolio-css/portfolio.css
@@ -163,13 +163,13 @@ html {
 }
 
 .portfolio-web-body {
-    display: block;
+    display: none;
 }
 
 .portfolio-photo-body {
     display: -webkit-box;
     display: -ms-flexbox;
-    display: none;
+    display: flex;
     -ms-flex-flow: row wrap;
         flex-flow: row wrap;
     -webkit-box-pack: justify;
