--- a/resources/css/header-footer.css
+++ b/resources/css/header-footer.css
@@ -117,6 +117,7 @@ a {
     font-size: 1.75rem;
     text-decoration: none;
     white-space: nowrap;
+    letter-spacing: -1px;
 }
 
 h2 {
@@ -159,8 +160,8 @@ h2 {
 }
 
 .header-overlay {
-/*    background-color: rgba(15, 15, 15, 0.4);*/
-    background-image: linear-gradient(to bottom, rgba(0, 0, 0, 0.15), rgba(0, 0, 0, 0.15) calc(100% - 150px), rgba(0, 0, 0, 0.3) calc(100% - 60px), rgba(0, 0, 0, 0.3));
+    /*background-color: rgba(15, 15, 15, 0.4);*/
+    /*background-image: linear-gradient(to bottom, rgba(0, 0, 0, 0.15), rgba(0, 0, 0, 0.15) calc(100% - 150px), rgba(0, 0, 0, 0.3) calc(100% - 60px), rgba(0, 0, 0, 0.3));*/
     position: relative;
     z-index: -1;
     height: 100%;
@@ -228,18 +229,33 @@ h2 {
 
 .sub-quote {
     font-size: clamp(1rem, 2vw, 1.2rem);
-    width: 52%;
+    width: 85%;
+    max-width: 920px;
     line-height: 1.25;
     font-weight: 400;
     border-top: 2px white solid;
     border-bottom: 2px white solid;
     border-radius: 2px;
-    padding: 1.5%;
+    padding: 1.3%;
 }
 
 .quote-name {
     font-size: clamp(0.7rem, 1.4vw, 0.85rem);
     font-style: italic;
+}
+
+.header-text {
+    font-size: clamp(0.8rem, 2vw, 1.1rem);
+    font-weight: 400;
+    color: white;
+    text-transform: uppercase;
+    letter-spacing: 3px;
+    position: absolute;
+    bottom: 30px;
+    font-weight: 700;
+    background-image: radial-gradient(rgba(50, 50, 50, 0.3), transparent 70%);
+    padding: 30px 12vw;
+    font-family: roboto, arial;
 }
 
 
@@ -328,6 +344,7 @@ h2 {
     position: relative;
     top: clamp(2px, 1.5vw, 30px);
     width: 100%;
+    max-width: 950px;
     z-index: 4;
 }
 
@@ -514,9 +531,9 @@ h2 {
         margin-top: 5px;
     }
 
-    .sub-quote {
+    /*.sub-quote {
         width: 65%;
-    }
+    }*/
 }
 
 @media only screen and (max-width: 940px) {
@@ -560,9 +577,9 @@ h2 {
         display: block;
     }
 
-    .sub-quote {
+    /*.sub-quote {
         display: none;
-    }
+    }*/
 }
 
 @media only screen and (max-width: 500px) {
