--- a/resources/css/style-my-blog.css
+++ b/resources/css/style-my-blog.css
@@ -53,17 +53,13 @@ a {
     width: 100%;
 }
 
+.main-body-home {
+    padding-top: 0;
+}
+
 .body-width-container {
     width: 100%;
     max-width: 950px;
-}
-
-.intro {
-    width: 97%;
-    padding: 2% 0 2% 0;
-    margin-bottom: 2.2%;
-    border-top: 2px solid #d3d3d3;
-    border-bottom: 2px solid #d3d3d3;  
 }
 
 .blog-entries {
@@ -171,7 +167,151 @@ img.selfportrait {
     }
 }
 
+/*new*/
 
+.header-img-container {
+    width: 100%;
+    height: 50%;
+    display: inline-flex;
+}
+
+.header-img-1 {
+overflow: hidden;
+}
+
+.about-me-container {
+    background-color: #F7F3F1;
+    width: 100%;
+    padding: max(4vw, 30px) 0;
+}
+
+.about-me {
+    display: flex;
+    align-items: center;
+    width: 95%;
+    max-width: 1200px;
+}
+
+.intro {
+    width: 80%;
+    padding: 2% 0 2% 0;
+    margin-bottom: 2.2%;
+    text-align: left;
+    line-height: 1.3; 
+    font-size: clamp(0.6rem, 1.3vw, 0.8rem); 
+    font-weight: 100;
+    color: #262C33;
+}
+
+.intro-opening {
+    width: 90%;
+    font-weight: 700;
+    font-size: clamp(0.6rem, 1.8vw, 1rem);
+    color: #303133;
+}
+
+
+.about-me-img {
+    width: 35%;
+    min-width: 300px;
+    padding: clamp(5px, 4vw, 40px);
+}
+
+.info-container {
+    text-align: left;
+    display: flex;
+    flex-direction: column;
+    width: 42%;
+    line-height: 1.3; 
+    font-size: clamp(0.6rem, 1.3vw, 0.8rem); 
+    font-weight: 100;
+}
+
+.info-section {
+    width: 92%;
+    max-width: 1300px;
+    margin: clamp(2rem, 18vh, 12rem) auto;
+    display: flex;
+    justify-content: space-between;
+}
+
+.blog-info-child {
+    margin: max(5px, 2vh) 0;
+
+}
+
+.photo-container {
+    width: 50%;
+    height: 350px;
+    display: grid;
+    grid-template: 1fr 1fr / 3fr 4fr;
+    gap:  5px 5px;
+}
+
+.banner-img {
+    width: 100%;
+    height: 700px;
+    background-image: url('../images/banner-river.jpg');
+    background-position: top;
+    background-size: cover;
+    background-repeat: no-repeat;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.banner-quote {
+    color: white;
+    background-image: radial-gradient(rgba(10, 10, 10, 0.8), transparent 70%);
+}
+
+.portfolio1 {
+    grid-column: 1 / 2;
+    grid-row: 1 / 3;
+    background-image: url(../../portfolio/portfolio-album-images/portraits/portrait25.jpg);
+    background-size: cover;
+    background-position: center;
+}
+
+.portfolio2 {
+    grid-column: 2 / 3;
+    grid-row: 1 / 2;
+    background-image: url(../../portfolio/portfolio-album-images/landscape/landscape1.jpg);
+    background-size: cover;
+    background-position: center;
+}
+
+.portfolio3 {
+    grid-column: 2 / 3;
+    grid-row: 2 / 3;
+    background-image: url(../../portfolio/portfolio-album-images/sport/sport19.jpg);
+    background-size: cover;
+    background-position: center;
+}
+
+.blog1 {
+    grid-column: 1 / 2;
+    grid-row: 1 / 3;
+    background-image: url(../images/blog5.jpg);
+    background-size: cover;
+    background-position: center;
+}
+
+.blog2 {
+    grid-column: 2 / 3;
+    grid-row: 1 / 2;
+    background-image: url(../images/blog6.jpg);
+    background-size: cover;
+    background-position: center;
+}
+
+.blog3 {
+    grid-column: 2 / 3;
+    grid-row: 2 / 3;
+    background-image: url(../../portfolio/portfolio-album-images/sport/sport12.jpg);
+    background-size: cover;
+    background-position: right;
+}
 
 /*=====================
 4) Contact me page
@@ -189,9 +329,9 @@ img.selfportrait {
     height: auto;
 }
 
-em {
-    color: black;
-    text-decoration: underline;
+.email {
+    color: #1895dc;
+    text-decoration: none;
     transition: color 200ms;
 }
 
@@ -200,8 +340,8 @@ em {
     font-size: clamp(0.85rem, 2.1vw, 1.2rem);
 }
 
-em:hover {
-    color: #1895dc;
+.email:hover {
+    color: hsl(202, 80%, 30%);
 }
 
 
@@ -224,6 +364,42 @@ em:hover {
     .contact-info {
         max-width: 95%;
     }
+}
+
+@media only screen and (max-width: 750px) {
+
+    .about-me {
+        flex-direction: column;
+    }
+
+    .about-me-img {
+        width: 90%;
+        max-width: 300px;
+        min-width: 0;
+    }
+
+    .info-section {
+        align-items: center;
+    }
+
+    .blog-section {
+        flex-direction: column-reverse;
+    }
+
+    .portfolio-section {
+        flex-direction: column;
+    }
+
+    .photo-container,
+    .info-container {
+        width: 95%;
+        max-width: 580px;
+    }
+
+    .banner-img {
+        height: 600px;
+    }
+
 }
 
 
