--- a/resources/css/header-footer.css
+++ b/resources/css/header-footer.css
@@ -496,7 +496,7 @@ h2 {
 }
 
 .copyright {
-    font-size: 16px;
+    font-size: clamp(9px, 2vw, 12px);
     padding: 0;
     margin: 0 auto;
     text-align: center;
